# ZhiZha

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ImportLibs.cmake  README.md  Zhizha.sln  main.cpp
Debug/: RayTracing.ilk  ZhiZha.ilk
ECS/: CMakeLists.txt
ECS/include/: Component.h  ComponentHandle.h  Entity.h  EntityManager.h  EntityWithComponent.h  EventListener.h  Graph.h  ResourceFile.h  ResourceManager.h  Scene.h  System.h  SystemManager.h  TypeFamily.h  utils.h
ECS/src/: Entity.cpp  EntityManager.cpp  ResourceFile.cpp  ResourceManager.cpp  SystemManager.cpp
GameEngine/: CMakeLists.txt
GameEngine/Debug/: RayTracing.exe.recipe  RayTracing.res  actor.obj.enc
GameEngine/Debug/RayTracing.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  rc.read.1.tlog
GameEngine/Debug/ZhiZha.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog
GameEngine/include/: Actor.h  ActorArchetype.h  ActorComponent.h  ActorManager.h  Character.h  Collision.h  Component.h  Components.h  CreateComplexCollisionSystem.h  Engine.h  Entity.h  EntityArchetype.h  EntityManager.h  FontResource.h  GameTime.h  HitResult.h  MatInitSystem.h  Material.h  MaterialComponent.h  MeshResource.h  ObjectDrawable.h  PupsyaEnums.h  PupsyaGlobals.h  PupsyaTypes.h  Resource.h  ResourceFile.h  ResourceManager.h  ShaderResource.h  StaticMesh.h  System.h  Systems.h  TextureResource.h  TypeFamily.h  World.h  utils.h
GameEngine/include/Components/: ActorComponent.h  BoxCollider.h  BoxCollisionComponent.h  ButtonComponent.h  CircleCollider.h  CircleCollisionComponent.h  ComplexCollisionComponent.h  LayerComponent.h  MaterialComponent.h  MeshCollider.h  MeshComponent.h  RenderedComponent.h  SpeedComponent.h  SpriteComponent.h  TransformComponent.h
GameEngine/include/Systems/: ActorRenderSystem.h  ButtonClickSystem.h  CameraMovingSystem.h  CollisionSystem.h  ComplexCollision_InitSystem.h  CreateComplexCollisionSystem.h  EndSystem.h  EventSystem.h  FPSSystem.h  MaterialAttachSystem.h  MoveSystem.h  RenderSystem.h  RenderSystem_HUD.h  RenderSystem_Models.h  RotateSystem.h  Systems.h
GameEngine/lib/glad/include/glad/: gl.h  glad.h
GameEngine/lib/glad/src/: glad.c
GameEngine/resources/: BaseMat.vert  Circle.frag  simple_map.mtl
GameEngine/src/: Actor.cpp  ActorArchetype.cpp  ActorManager.cpp  Character.cpp  Collision.cpp  Component.cpp  CreateComplexCollisionSystem.cpp  Engine.cpp  Entity.cpp  EntityArchetype.cpp  EntityManager.cpp  GameTime.cpp  MatInitSystem.cpp  Material.cpp  MaterialComponent.cpp  MeshResource.cpp  ObjectDrawable.cpp  PupsyaTypes.cpp  ResourceFile.cpp  ResourceManager.cpp  ShaderResource.cpp  StaticMesh.cpp  SystemManager.cpp  Systems.cpp  TextureResource.cpp  World.cpp
GameEngine/src/Systems/: ActorRenderSystem.cpp  ButtonClickSystem.cpp  CameraMovingSistem.cpp  CollisionSystem.cpp  ComplexCollision_InitSystem.cpp  CreateComplexCollisionSystem.cpp  EndSystem.cpp  EventSystem.cpp  FPSSystem.cpp  MaterialAttachSystem.cpp  RenderSystem.cpp  RenderSystem_HUD.cpp  RenderSystem_Models.cpp  RotateSystem.cpp
Lib/Hypodermic/lib/pkgconfig/: libhypodermic.pc
Lib/MacOS/SFML-2.5.1/lib/: libsfml-audio.2.5.dylib  libsfml-audio.dylib  libsfml-graphics.2.5.dylib  (+7 more)
PhysicsEngine/: CMakeLists.txt
PhysicsEngine/include/: ComponentDrop.h  ComponentVolume.h  DefinesPhysics.h
PhysicsEngine/include/Systems/: CollisionSystem.h  ComplexCollisionSystem.h  ForceCalculationSystem.h  GravitationSystem.h  ResetParamsSystem.h  ShiftDropsSystem.h  SlipSystem.h  UnionDropsSystem.h
PhysicsEngine/src/: CollisionSystem.cpp  ComplexCollisionSystem.cpp  ForceCalculationSystem.cpp  GravitationSystem.cpp  ResetParamsSystem.cpp  ShiftDropsSystem.cpp  UnionDropsSystem.cpp
RayTracing/: Actor.cpp  Actor.h  BaseMat.frag  Character.cpp  Character.h  Collision.cpp  Collision.h  HitResult.h  Material.cpp  Material.h  PupsyaEnums.h  PupsyaGlobals.h  PupsyaTypes.cpp  PupsyaTypes.h  RayTracing.rc  RayTracing.vcxproj  RayTracing.vcxproj.filters  StaticMesh.cpp  StaticMesh.h  World.cpp  ZhiZha.cpp  glad.c  obj3d.cpp  obj3d.h
RayTracing/Debug/: ZhiZha.exe.recipe  vc142.idb
RayTracing/Debug/RayTracing.tlog/: CL.read.1.tlog  RayTracing.lastbuildstate  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
RayTracing/Debug/ZhiZha.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ZhiZha.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
project/include/: BackGround_InitSystem.h  Components.h  CountdownSystem.h  DrawableZhizha.h  Engine.h  FormZhizhaVolume_System.h  GlobalRotation_Component.h  Grass_InitSystem.h  HappyEndSystem.h  Map_InitSystem.h  Material.h  MenuSystem.h  MeshResource.h  NameComponent.h  ResourceFile.h  ShaderResource.h  SmallBrunch_InitSystem.h  SmallSkull_InitSystem.h  Stone_1_InitSystem.h  Stone_2_InitSystem.h  Systems.h  TextureResource.h  Tree_1_InitSystem.h  Tree_2_InitSystem.h  Tree_3_InitSystem.h  ZhizhaDraw_System.h  ZhizhaVolumeComponent.h  ZhizhaVolume_InitSystem.h  Zhizha_InitSystem.h
project/resources/: BaseMat.frag  simple_map.mtl
project/resources/Meshes/: Map.mtl  brunch_small.mtl  grass.mtl  map_simple.mtl  skull_small.mtl  stone_1.mtl  stone_2.mtl  tree_1.mtl  tree_2.mtl  tree_3.mtl
project/resources/Shaders/: BackGround.frag  BaseMat.vert  Circle.frag  Circle.vert  Map.frag  Map.vert  Zhizha.vert  ZhizhaVolume.vert
project/src/: BackGround_InitSystem.cpp  Components.cpp  CountdownSystem.cpp  DrawableZhizha.cpp  Engine.cpp  FormZhizhaVolume_System.cpp  Grass_InitSystem.cpp  HappyEndSystem.cpp  Map_InitSystem.cpp  Material.cpp  MenuSystem.cpp  MeshResource.cpp  ResourceFile.cpp  ShaderResource.cpp  SmallBranch_InitSystem.cpp  SmallSkull_InitSystem.cpp  Stone_1_InitSystem.cpp  Stone_2_InitSystem.cpp  Systems.cpp  TextureResource.cpp  Tree_1_InitSystem.cpp  Tree_2_InitSystem.cpp  Tree_3_InitSystem.cpp  ZhizhaDraw_System.cpp  ZhizhaVolume_InitSystem.cpp  Zhizha_InitSystem.cpp  main.cpp
(+16 files in other folders)
